# BambuStudio

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  HANDOFF.md  README.md  ROADMAP.md  build_win.bat
.github/workflows/: build_all.yml  build_bambu.yml  build_check_cache.yml  build_deps.yml  cd-deploy-homebrew.yml  ui-md3-pages.yml  winget_updater.yml
docs/: README.md
docs/screenshots/: README.md
packaging/windows/: BambuStudioMD3.nsi  GenerateUninstallInclude.ps1
scripts/ci/: New-WindowsCycloneDxSbom.ps1  Test-WindowsInstaller.ps1  Test-WindowsNativeVisual.ps1  Test-WindowsRelease.ps1
scripts/i18n/: Test-LanguageModes.ps1
src/libslic3r/: AppConfig.cpp  CMakeLists.txt  NSVGUtils.cpp  ProjectHistoryManager.cpp  ProjectHistoryManager.hpp
src/slic3r/: CMakeLists.txt
tests/: CMakeLists.txt  test_utils.hpp
tests/fila_manager/: CMakeLists.txt
tests/language_mode/: CMakeLists.txt  language_mode_tests_main.cpp
tests/libnest2d/: CMakeLists.txt  libnest2d_tests_main.cpp
tests/libslic3r/: CMakeLists.txt  test_3mf.cpp  test_config.cpp  test_deterministic_bbs_3mf.cpp  test_geometry.cpp  test_placeholder_parser.cpp  test_voronoi.cpp
tests/project_history/: CMakeLists.txt  project_history_tests.cpp
ui-md3/: ARCH-PARALLEL.md  README.md  SPEC.md  index.html  landing.html
ui-md3/app/: boot.js  i18n.js  i18n.resources.js  main.logic.js  styles.css
ui-md3/design-system/: SKILL.md  readme.md  styles.css
ui-md3/desktop/: README.md  package.json
ui-md3/runtime/: mini-dc.js
ui-md3/scripts/: assemble-index.mjs
ui-md3/tests/: assert-pages-layout.mjs  (+1 more)
(+411 files in other folders)
